force-app/main/default/objects/Recurring_Contract_Line_Item__c/Recurring_Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Recurring Contract Line Item</label>
    <nameField>
        <displayFormat>RCLI-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Contract Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>