force-app/main/default/objects/Recurring_Contract_Line_Item__c/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <label>Contract Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>