force-app/main/default/objects/Recurring_Contract_Line_Item__c/fields/Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Frequency__c</fullName>
    <label>Delivery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>