force-app/main/default/objects/Recurring_Contract_Line_Item__c/fields/Last_Order_Created_Datex__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Created_Datex__c</fullName>
    <label>Last Order Created Datex</label>
    <type>Date</type>
</CustomField>