force-app/main/default/objects/Recurring_Contract_Line_Item__c/fields/Next_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Delivery_Date__c</fullName>
    <label>Next Delivery Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>