force-app/main/default/objects/Recurring_Contract_Line_Item__c/fields/Recurring_Contract__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recurring Contract</label>
    <referenceTo>Recurring_Contract__c</referenceTo>
    <relationshipLabel>Recurring Contract Line Items</relationshipLabel>
    <relationshipName>Recurring_Contract_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>